resourses/virtual-services/test-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-test
  namespace: dev
spec:
  hosts:
  - "backend-spring.arakaki.in"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: backend-spring
